# prompt-experiment-management

./: .gitignore  README.md  main.py  prompt.text  pyproject.toml
conf/: config.yaml
conf/input/: life.yaml  tech.yaml
