[tool.poetry]
name = "prompt-experiment-management"
version = "0.1.0"
description = ""
authors = ["hideto0710 <h.inamura0710@gmail.com>"]
readme = "README.md"
packages = [{include = "prompt_experiment_management"}]

[tool.poetry.dependencies]
python = "^3.10"
hydra-core = "^1.3.2"
jinja2 = "^3.1.2"
openai = "^0.26.5"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
